--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -1,6 +1,6 @@
 <html lang="uk">
     <head>
-        <title>PixelArt 2.0</title>
+        <title>PixelArt</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="images/png/icon.png">
         <link rel="canonical" href="https://smurfik997.github.io/PixelArt/"/>
