--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -39,7 +39,6 @@
             setTimeout(() => {
                 document.getElementById('windowE').remove()
                 err != 1? document.getElementById('error').remove() : null
-                resize()
                 document.getElementById('script').remove()
             })
         </script>
@@ -72,7 +71,7 @@
                     <img src="images/svg/edit.svg" alt="Редагувати" id="edit" class="icon r"/>
                 </div>
                 <div class="iconB noDisp">
-                    <img src="images/svg/share.svg" id="share" alt="Поділитися" class="icon r"/>
+                    <img src="images/svg/shareN.svg" id="share" alt="Поділитися" class="icon r"/>
                 </div>
             </div>
         </div>
