--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -83,7 +83,7 @@
         </div>
         <div id="paletteBlock" class="content settings">
             <div id="colors" class="plot">
-                <div class="colorB" color="a" style="background-color: var(--white);" onclick="changeColor(this);"></div>
+                <div class="colorB" color="a" style="background-color: white;" onclick="changeColor(this);"></div>
                 <div class="colorB currC" color="g" style="background-color: var(--light-gray);" onclick="changeColor(this);"></div>
                 <div class="colorB" color="b" style="background-color: var(--gray);" onclick="changeColor(this);"></div>
                 <div class="colorB" color="e" style="background-color: var(--green);" onclick="changeColor(this);"></div>
