--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -33,6 +33,9 @@
                     document.getElementById('error').style.display = 'table'
                     document.getElementById('preload').className = 'noDisp'
                 }
+
+                console.log(e)
+                document.getElementById('preload').querySelector('img').setAttribute('src', 'images/svg/icon160Red.svg')
             })
         </script>
         <script id="script" type="text/javascript">
