--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -34,7 +34,6 @@
                     document.getElementById('preload').className = 'noDisp'
                 }
 
-                console.log(e)
                 document.getElementById('preload').querySelector('img').setAttribute('src', 'images/svg/icon160Red.svg')
             })
         </script>
@@ -74,7 +73,7 @@
                     <img src="images/svg/edit.svg" alt="Редагувати" id="edit" class="icon r"/>
                 </div>
                 <div class="iconB noDisp">
-                    <img src="images/svg/shareN.svg" id="share" alt="Поділитися" class="icon r"/>
+                    <img src="images/svg/share.svg" id="share" alt="Поділитися" class="icon r"/>
                 </div>
             </div>
         </div>
