--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -64,9 +64,9 @@
                 <!-- 2.0--></div>
                 <div id="fCurrNum" class="noDisp">
                     <div id="fCurrNumCounter" class="counter" style="margin-top: 0; height: 60%; width: 100%;"> 
-                        <div class="counterB noVA" style="padding-left: 1%;" onclick="sButtonClick('fCurrNumCounter', '-', 1, anim.framesC, 1, '')">&minus;</div>
+                        <div class="counterB" style="padding-left: 1%;" onclick="sButtonClick('fCurrNumCounter', '-', 1, anim.framesC, 1, '')">&minus;</div>
                         <div class="counterT noVA">1</div>
-                        <div class="counterB plus noVA" style="padding-right: 1%;" onclick="sButtonClick('fCurrNumCounter', '+', 1, anim.framesC, 1, '')">+</div>
+                        <div class="counterB plus" style="padding-right: 1%; padding-top: 0%;" onclick="sButtonClick('fCurrNumCounter', '+', 1, anim.framesC, 1, '')">+</div>
                     </div>
                 </div>
                 <div class="iconB">
