--- a/svgFix/index.html
+++ b/svgFix/index.html
@@ -7,14 +7,13 @@
         <style type="text/css">
             body {
                 margin: auto;
-                min-height: 500px;
-                min-width: 500px;
                 font: 15pt/7pt Arial; /* style, size (12pt/14pt) 14pt - отступ между строками, family */
                 color: black;
             }
 
             #plot {
-                position: absolute;
+                position: fixed;
+                z-index: 0;
                 top: calc(50% - 200px - 20px);
                 left: calc(50% - 200px); /* calc!!!!! */
                 box-shadow: 0px 0px 200px 1px rgba(120, 120, 120, .2); /* x, y, rShad, r */
@@ -31,7 +30,7 @@
                 height: 100%;
                 background-color: white;
                 position: fixed;
-                z-index: 1;
+                z-index: 100;
                 /* display: none; */ /* temporary */
             }
 
@@ -62,6 +61,7 @@
             #colorFixButton {
                 height: 20px;
                 position: fixed;
+                z-index: 1;
                 bottom: 10px;
                 border-radius: 50%;
                 transition: width .3s, left .3s, box-shadow .2s;
@@ -91,6 +91,7 @@
 
             #colorsBox {
                 position: fixed;
+                z-index: 1;
                 height: 20px;
                 top: -20px;
                 width: calc(30px * var(--colors));
