--- a/Twitch/index.html
+++ b/Twitch/index.html
@@ -20,7 +20,7 @@
 
             body {
                 margin: 0 auto;
-                font-family: Gulim;
+                font-family: Gulim, Calibri;
                 font-weight: 600;
                 user-select: none;
                 min-height: calc(700px * var(--heightR));
