--- a/Twitch/index.html
+++ b/Twitch/index.html
@@ -30,6 +30,7 @@
                 --green: rgb(0, 235, 200);
                 --greenHover: rgb(0, 205, 185);
                 --red: rgb(255, 100, 120);
+                --redHover: rgb(250, 80, 110);
                 --gray: rgb(245, 245, 245);
             }
 
@@ -117,7 +118,7 @@
                     width: calc(120px * var(--heightR));
                     border-radius: calc(60px * var(--heightR));
                     font-size: calc(60px * var(--heightR));
-                    background-color: var(--red);
+                    background-color: var(--redHover);
                     line-height:  calc(119px * var(--heightR));
                     transition: background-color .7s;
                     float: right;         
