--- a/Twitch/index.html
+++ b/Twitch/index.html
@@ -4,16 +4,6 @@
         <meta charset="utf-8">
         <style>
             @font-face {
-                font-family: Font;
-                src: url('EtelkaMonospace.otf');
-            }
-
-            @font-face {
-                font-family: FontB;
-                src: url('EtelkaMonospace-bold.otf');
-            }
-
-            @font-face {
                 font-family: Gulim;
                 src: url('gulim.ttf');
             }
@@ -26,7 +16,7 @@
                 font-weight: 600;
                 user-select: none;
                 min-height: calc(700px * var(--heightR));
-                background: url(test.png) repeat;
+                background: url('background.png') repeat;
                 background-position: 0px 0px;
                 --heightR: 1;
                 --green: rgb(0, 235, 200);
@@ -57,9 +47,8 @@
                 width: 95%;  
                 left: 2.5%;
                 z-index: 0;
-                /* box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.1); */
                 background-color: var(--gray);
-                border-radius: 0px 0px calc(60px * var(--heightR)) calc(60px * var(--heightR));
+                border-radius: 0px 0px calc(30px * var(--heightR)) calc(30px * var(--heightR));
                 font-size: calc(65px * var(--heightR));
                 text-align: center; 
                 line-height: calc(117px * var(--heightR));
@@ -69,20 +58,6 @@
                     width: 33.33%;
                     height: 100%;
                     float: left;
-                }
-
-                div[info="botsCount"] > div:nth-child(1) > div:nth-child(1) {
-                    background-color: var(--gray);
-                    border-radius: 0px 0px 0px calc(30px * var(--heightR));
-                }
-
-                div[info="botsCount"] > div:nth-child(1) > div:nth-child(2) {
-                    /* background-color: rgb(250, 250, 250); */
-                }
-
-                div[info="botsCount"] > div:nth-child(1) > div:nth-child(3) {
-                    background-color: var(--gray);
-                    border-radius: 0px 0px calc(30px * var(--heightR)) 0px;
                 }
 
                     div[info="botsCount"] > div:nth-child(1) > div > div[type="title"] {
@@ -99,7 +74,6 @@
                 height: calc(120px * var(--heightR)); 
                 width: calc(600px * var(--heightR));
                 z-index: 2;
-                /* box-shadow: 5px 5px 20px 5px rgba(255, 100, 120, 0.2); */
                 background-color: var(--red);
                 top: calc(290px * var(--heightR));
                 left: calc(50% - 300px * var(--heightR));
@@ -112,7 +86,6 @@
 
                 div[info="botsCount"][active="true"] > div:nth-child(2) {
                     width: calc(640px * var(--heightR));
-                    /* box-shadow: 5px 5px 20px 5px rgba(0, 235, 200, 0.15); */
                     background-color: var(--green);
                     left: calc(50% - 320px * var(--heightR));
                 }
@@ -165,7 +138,7 @@
                 position: absolute;
                 height: calc(80px * var(--heightR)); 
                 width: calc(640px * var(--heightR));
-                background: url(test.png) repeat; /* background-color: rgb(255, 255, 255); */
+                background: url('background.png') repeat;
                 background-position-x: calc(320px * var(--heightR) - 50vw);
                 background-position-y: calc(-270px * var(--heightR));
                 z-index: 1;
@@ -283,62 +256,49 @@
             /* topElem */
             div[type="topElem"] {
                 width: 100%;
-                background-color: var(--white);
+                height: calc(60px * var(--heightR));
                 margin: calc(10px * var(--heightR)) 0px;
-                border-radius: calc(12px * var(--heightR));;
-            }
+                border-radius: calc(12px * var(--heightR));
+                background-color: var(--white);
+                line-height: calc(40px * var(--heightR));
+                --num: 1;
+                --fontR: calc(40 / (40 + 1 * (var(--num) - 1)));
+                font-size: calc(26px * var(--fontR) * var(--heightR));
+                color: var(--darkGray);
+            } 
 
                 div[type="topElem"] > div {
                     float: left;
-                }      
-
-            div[type="topElem"][pos="first"] {
-                height: calc(70px * var(--heightR));
-                line-height: calc(44px * var(--heightR));
-                --num: 1;
-                --fontR: calc(44 / (44 + 16 * (var(--num) - 1)));
-                font-size: calc(26px * var(--fontR) * var(--heightR));
-                color: var(--darkGray);
-            }
-
-                div[type="topElem"][pos="first"] > div {
-                        margin: calc(13px * var(--heightR));
-                        height: calc(44px * var(--heightR));
-                        opacity: 0;
-                        transition: opacity .7s;
+                    margin: calc(10px * var(--heightR)) calc(13px * var(--heightR));
+                    height: calc(40px * var(--heightR));
+                    opacity: 0;
+                    transition: opacity .7s;
                 }
 
-                div[type="topElem"][pos="first"][data="loaded"] > div {
+                div[type="topElem"][data="loaded"] > div {
                     opacity: 1;
                 }
 
-                div[type="topElem"][pos="first"] > div:nth-child(1) {
-                        width: calc(44px * var(--heightR));
-                        background-position: center;
-                        background-size: contain;
-                        background-repeat: no-repeat;
+                /* topElem */
+                div[type="topElem"] > div:nth-child(1) {
+                    width: calc(44px * var(--heightR));
+                    background-position: center;
+                    background-size: contain;
+                    background-repeat: no-repeat;
                 }
 
-                div[type="topElem"][pos="first"] > div:nth-child(2) {
-                    width: calc(100% - (140px - 16px * (var(--num) - 1)) * var(--heightR));
-                    margin: calc(13px * var(--heightR)) 0px;
-                    line-height: calc(42px * var(--heightR));
+                div[type="topElem"] > div:nth-child(2) {
+                    width: calc(100% - (140px + 9px * (var(--num) - 1)) * var(--heightR));
+                    margin: calc(10px * var(--heightR)) 0px;
                     box-sizing: border-box;
-                    padding-left: calc(18px * var(--heightR));
+                    padding-left: calc(16px * var(--heightR) * var(--fontR));
+                    text-align: left;
                 }
 
-                div[type="topElem"][pos="first"] > div:nth-child(3) {
-                    width: calc((44px + 16px * (var(--num) - 1)) * var(--heightR));
+                div[type="topElem"] > div:nth-child(3) {
+                    width: calc((44px + 9px * (var(--num) - 1)) * var(--heightR));
                     color: var(--green);
                 }
-
-            div[type="topElem"][pos="second"] {
-                height: calc(60px * var(--heightR));
-            }
-
-            div[type="topElem"][pos="third"] {
-                height: calc(50px * var(--heightR));
-            }
         </style>
     </head>
     <body>
@@ -365,17 +325,18 @@
                 </div>
                 <div>
                     <div type="title">НАШ ТОП</div>
-                    <div type="topElem" pos="first">
-                        <div style="background-image: url('error');"></div>
-                        <div></div>
-                        <div></div>
-                    </div>
-                    <div type="topElem" pos="second">
+                    <div type="topElem" pos="1">
                         <div></div>
                         <div></div>
                         <div></div>
                     </div>
-                    <div type="topElem" pos="third">
+                    <div type="topElem" pos="2">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <div type="topElem" pos="3">
+                        <div></div>
                         <div></div>
                         <div></div>
                         <div></div>
@@ -409,11 +370,44 @@
                 console.log(response)
                 incCount(response.chatters.length)
                 document.querySelector('div[info="botsCount"]').setAttribute('active', 'true')
+                let top = response.twitchEmotes.concat(response.hashtags),
+                    sort = [],
+                    topSorted = []
 
-                document.querySelector('div[type="topElem"][pos="first"]').setAttribute('data', 'loaded');
-                document.querySelectorAll('div[type="topElem"][pos="first"] div')[0].style.backgroundImage = `url('https://static-cdn.jtvnw.net/emoticons/v1/${response.twitchEmotes[0].id}/5.0`
-                document.querySelectorAll('div[type="topElem"][pos="first"] div')[1].innerText = `Всеми давно любимый ${response.twitchEmotes[0].emote}`
-                document.querySelectorAll('div[type="topElem"][pos="first"] div')[2].innerText = response.twitchEmotes[0].amount
+                for (let i = 0, len = top.length; i < len; i++) sort[i] = top[i].amount
+                sort.sort()
+                
+                for (let i = 0, len = top.length; i < len; i++) {
+                    topSorted[len - sort.indexOf(top[i].amount) - 1] = top[i]
+                    sort[sort.indexOf(top[i].amount)] = -1
+                }
+
+                const word = [
+                    'Всеми давно любимый',
+                    'Всемирно известный',
+                    'Давно уже популярный',
+                    'Всем давно известный'
+                ]
+
+                console.log(topSorted)
+
+                for (let i = 0, len = topSorted.length; i < len; i++) {
+                    document.querySelector(`div[type="topElem"][pos="${i + 1}"]`).style.cssText = `--num: ${String(topSorted[i].amount).length}`
+                    document.querySelectorAll(`div[type="topElem"][pos="${i + 1}"] div`)[1].innerText = `${word[i]} ${topSorted[i].emote || topSorted[i].hashtag}`
+                    document.querySelectorAll(`div[type="topElem"][pos="${i + 1}"] div`)[2].innerText = topSorted[i].amount
+
+                    if (topSorted[i].id) {
+                        let icon = new Image()
+                        icon.onload = () => {
+                            document.querySelectorAll(`div[type="topElem"][pos="${i + 1}"] div`)[0].style.backgroundImage = `url(${icon.src})`
+                            document.querySelector(`div[type="topElem"][pos="${i + 1}"]`).setAttribute('data', 'loaded') 
+                        }
+                        icon.src = `https://static-cdn.jtvnw.net/emoticons/v1/${topSorted[i].id}/5.0`
+                    } else {
+                        document.querySelectorAll(`div[type="topElem"][pos="${i + 1}"] div`)[0].style.backgroundImage = `url('hashtag.png')`
+                        document.querySelector(`div[type="topElem"][pos="${i + 1}"]`).setAttribute('data', 'loaded')
+                    }
+                }
             } else if (req.readyState === 4) {
                 console.log('Trying again...')
                 req.open('GET', 'https://api.streamelements.com/kappa/v2/chatstats/teagroup/stats')
