--- a/Twitch/index.html
+++ b/Twitch/index.html
@@ -279,7 +279,6 @@
                     opacity: 1;
                 }
 
-                /* topElem */
                 div[type="topElem"] > div:nth-child(1) {
                     width: calc(44px * var(--heightR));
                     background-position: center;
@@ -317,7 +316,11 @@
             <div>
                 <div>
                     <div type="title">ВСЕГО СООБЩЕНИЙ</div>
-                    <div type="messagesElem" pos="1"></div>
+                    <div type="messagesElem" pos="1">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <div type="messagesElem" pos="2"></div>
                     <div type="messagesElem" pos="3"></div>
                     <div type="messagesElem" pos="4"></div>
@@ -336,7 +339,6 @@
                         <div></div>
                     </div>
                     <div type="topElem" pos="3">
-                        <div></div>
                         <div></div>
                         <div></div>
                         <div></div>
