--- a/Twitch/index.html
+++ b/Twitch/index.html
@@ -268,7 +268,7 @@
                     width: calc(100% - (108px + 8px * (var(--num) - 1)) * var(--heightR));
                     margin: calc(8px * var(--heightR)) 0px;
                     box-sizing: border-box;
-                    padding-left: calc(12px * var(--heightR) * var(--fontR));
+                    padding-left: calc(3px * var(--heightR));
                     text-align: left;
                 }
 
@@ -295,7 +295,7 @@
                 line-height: calc(40px * var(--heightR));
                 --num: 1;
                 --fontR: calc(40 / (40 + 1 * (var(--num) - 1)));
-                font-size: calc(26px * var(--fontR) * var(--heightR));
+                font-size: calc(26.5px * var(--fontR) * var(--heightR));
                 color: var(--darkGray);
             } 
 
@@ -322,7 +322,7 @@
                     width: calc(100% - (140px + 9px * (var(--num) - 1)) * var(--heightR));
                     margin: calc(10px * var(--heightR)) 0px;
                     box-sizing: border-box;
-                    padding-left: calc(16px * var(--heightR) * var(--fontR));
+                    padding-left: calc(5px * var(--heightR));
                     text-align: left;
                 }
 
